[gd_scene load_steps=21 format=1]

[ext_resource path="res://Player/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/HUD/PlayerHearts.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Sprites/Hitbox/0.png" type="Texture" id=3]
[ext_resource path="res://Player/Sprites/Idle/Bowman_00014.png" type="Texture" id=4]
[ext_resource path="res://Player/Sprites/Roll/Bowman_00010.png" type="Texture" id=5]
[ext_resource path="res://Player/Sprites/Roll/Bowman_00011.png" type="Texture" id=6]
[ext_resource path="res://Player/Sprites/Roll/Bowman_00012.png" type="Texture" id=7]
[ext_resource path="res://Player/Sprites/Hurt/Bowman_00013.png" type="Texture" id=8]
[ext_resource path="res://Player/Sprites/Walk/Bowman_00000.png" type="Texture" id=9]
[ext_resource path="res://Player/Sprites/Walk/Bowman_00001.png" type="Texture" id=10]
[ext_resource path="res://Player/Sprites/Walk/Bowman_00002.png" type="Texture" id=11]
[ext_resource path="res://Player/Sprites/Walk/Bowman_00003.png" type="Texture" id=12]
[ext_resource path="res://Player/Sprites/Jump/Bowman_00007.png" type="Texture" id=13]
[ext_resource path="res://Player/Sprites/Jump/Bowman_00008.png" type="Texture" id=14]
[ext_resource path="res://Player/Sprites/Jump/Bowman_00009.png" type="Texture" id=15]
[ext_resource path="res://Player/Sprites/Shoot/Bowman_00004.png" type="Texture" id=16]
[ext_resource path="res://Player/Sprites/Shoot/Bowman_00005.png" type="Texture" id=17]
[ext_resource path="res://Player/Sprites/Shoot/Bowman_00006.png" type="Texture" id=18]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "roll",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "shoot",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 16.0
height = 64.0

[node name="Player" type="KinematicBody2D"]

input/pickable = false
collision/layers = 0
collision/mask = 0
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="HUD" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="PlayerHearts" parent="HUD" instance=ExtResource( 2 )]

[node name="PlayerMask" type="Sprite" parent="."]

visibility/visible = false
texture = ExtResource( 3 )

[node name="PlayerSprites" type="AnimatedSprite" parent="."]

frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="PlayerArea" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 6 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 6
collision/mask = 6

[node name="AreaCollision" type="CollisionShape2D" parent="PlayerArea"]

transform/pos = Vector2( 0, 6 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="HurtTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="InvinTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="BlinkTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="RollTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="ShootTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false


